# kuu

./: bun.lockb  index.html  package.json  vite.config.ts
src/: App.view.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: cmds.rs  global_state.rs  lib.rs
src-tauri/src/database/: db.rs
src-tauri/src/utils/: audio.rs  common.rs  dirs.rs  file.rs  graph.rs  img.rs  label.rs  mod.rs  node.rs  pdf.rs  service.rs  websocket.rs
src/app/area/: import_area.view.ts  rule_area.view.ts  tool_area.view.ts  view_area.view.ts
src/app/data/: const.ts  filter_state.ts  global_env.ts  modal_state.ts  pre_define_data.ts  type.ts  utils.ts
src/app/main/: main_area.view.ts  second_area.view.ts
src/app/services/: cmds.ts  tauri.ts  websocket.ts
src/app/side_panel/: side_panel.view.ts
src/component/bar/: guide_bar.view.ts  import_file_list.view.ts  item_bar.view.ts  item_tool_bar.view.ts  present_label_bar.view.ts  state_item_bar.view.ts  title_bar.view.ts
src/component/button/: activated_info_button.view.ts  add_tab_button.view.ts  confirm_button.view.ts  context_menu_button.view.ts  deactivatec_info_button.view.ts  invalid_add_tab_fn_button.view.ts  invalid_confirm_button.view.ts  magnetic_button.view.ts  normal_button.view.ts  tab_route_button.view.ts  typed_button.view.ts  undeactivatable_tab_route_button.view.ts  weak_text_button.view.ts
src/component/exp/: envcomp.view.ts  modal_box.view.ts  (+1 more)
src/icon/: all_icon.view.ts
src/state/: dark_mode_state.ts
src/structure/: toast.ts
src/utils/: time.ts
(+50 files in other folders)
