[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["GrahLnn"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
surrealdb = { version = "1", features = ["kv-rocksdb"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
blake3 = "1.5.1"
tauri-plugin-dialog = "2.0.0-beta"
async-std = "1.12.0"
image = "0.25.1"
pdf = "0.9.0"
base64 = "0.22.0"
lopdf = "0.32.0"
pdfium-render = "0.8.20"
rayon = "1.10.0"
anyhow = "1.0.82"
once_cell = "1.19.0"
chrono = "0.4.38"
tauri-plugin-store = "2.0.0-beta.6"
futures = "0.3.30"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
